<resources>
    <string name="app_name">Movie Suggestion</string>
    <string name="nav_home">Suggestions</string>
    <string name="nav_favorites">Favorites</string>
    <string name="film_puani_yildiz">Movie Rating Star</string>
    <string name="cardpicture">Card Picture</string>
    <string name="detayyil">Movie Release Date</string>
    <string name="detayozetbaslik">Overview:</string>
    <string name="detay_sure">Movie Runtime:</string>
    <string name="degisken">Variable</string>
    <string name="favoribos">Your Favorite List is Empty</string>
    <string name="favoricikti">Movie Removed from Favorites</string>
    <string name="favoriekle">Added to Favorites</string>
    <string name="detayOyuncularbaslik">Cast:</string>
    <string name="detayFilmtur">Genres:</string>
    <string name="detayYonetmenbaslik">Director:</string>
    <string name="addtur">Genres:</string>
    <string name="text_username_email">Username/E-Mail</string>
    <string name="text_email">E-Mail</string>
    <string name="text_login">Login</string>
    <string name="username_taken">Username is taken</string>
    <string name="text_register_error">Registration failed. Please try again</string>
    <string name="text_register_success">Registration successful</string>
    <string name="text_logout">Logout</string>
    <string name="text_enter_email">Please enter E-Mail address</string>
    <string name="text_enter_fields">Please fill all fields</string>
    <string name="text_enter_username">Please enter username</string>
    <string name="text_passwords_same">Passwords are not the same. Please check passwords</string>
    <string name="text_user_already_registered">User is already registered with another registration method</string>
    <string name="text_username_password">User not found or password incorrect</string>
    <string name="text_enter_username_password">Please enter username and password</string>
    <string name="btn_google">Login with Google</string>
    <string name="text_username">Username</string>
    <string name="text_password">Password</string>
    <string name="text_password_valid">Re-Enter Password</string>
    <string name="btn_register">Register</string>
    <string name="text_login_with">Login With</string>
    <string name="navsearch">Search</string>
    <string name="turaction">Action</string>
    <string name="turadventure">Adventure</string>
    <string name="turfantasy">Fantasy</string>
    <string name="turscience">Science Fiction</string>
    <string name="turthriller">Thriller</string>
    <string name="turdrama">Drama</string>
    <string name="turmystery">Mystery</string>
    <string name="turcrime">Crime</string>
    <string name="sonucyok">No Search Results Found</string>
    <string name="degergir">Please Enter Search Criteria</string>
    <string name="aramafilmadi">Movie Name</string>
    <string name="aramayonetmen">Director</string>
    <string name="aramaoyuncu">Actor/Actress</string>
    <string name="more">All Cast</string>
    <string name="buttonFav">Favorites Button</string>
    <string name="movierating">Movie Rating</string>
    <string name="movieimage">Movie Image</string>
    <string name="searchimage">No Search Result Found Image</string>
    <string name="turwestern">Western</string>
    <string name="turwar">War</string>
    <string name="resimindirme">Picture Downloaded</string>
    <string name="buttondownloadPicture">Download Picture Button </string>
    <string name="turcomedy">Comedy</string>
    <string name="cinsellik">Movie Contains Sexuality</string>
    <string name="siddet">Movie Contains Elements of Violence and Fear</string>
    <string name="aile">Movie Suitable For Families</string>
    <string name="olmsuz">Movie Contains Movements That Can Create a Negative Sample</string>
    <string name="yas7">Suitable for Audience of 7 Years and Over</string>
    <string name="yas13">Suitable for Audience of 13 Years and Over</string>
    <string name="yas15">Suitable for Audience of 15 Years and Over</string>
    <string name="yas18">Suitable for Audience of 18 Years and Over</string>
    <string name="turhistory">History</string>
    <string name="text_theme">Choose Theme</string>
    <string name="resimler">Pictures:</string>
    <string name="privacy">Privacy Policy</string>
    <string name="card">List Layout</string>
    <string name="dashboard">Grid Layout</string>
    <string name="daynight">Day/Night Mode</string>
    <string name="settings">Settings</string>
    <string name="text_privacy">Privacy Policy</string>
    <string name="text_terms">Terms and Conditions</string>
    <string-array name="themes">
        <item>Follow System</item>
        <item>Dark</item>
        <item>Light</item>
    </string-array>
    <string name="themoviedb">Movie information, movie pictures, actor information, actor pictures, director information and director pictures are taken from The Movie DB</string>
    <string name="login_message">You can log in from the settings to store your favorites in the cloud</string>
    <string name="text_logout_success">You have successfully logged out</string>
</resources>
