<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.SettingsActivity">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:id="@+id/settingsRelative">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/text_theme"
            android:id="@+id/themeText"
            android:layout_centerVertical="true"/>
        <Spinner
            android:layout_width="200dp"
            android:layout_toEndOf="@id/themeText"
            android:layout_height="wrap_content"
            android:id="@+id/settingsTheme"
            android:background="@drawable/gradient_spinner"
            android:layout_marginStart="10dp"/>
    </RelativeLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/privacyButton"
        android:layout_below="@id/settingsRelative"
        android:layout_marginTop="14dp"
        android:layout_centerHorizontal="true"
        android:text="@string/text_privacy"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/termsButton"
        android:layout_marginTop="14dp"
        android:layout_below="@id/privacyButton"
        android:text="@string/text_terms"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/btn_login"
        android:layout_marginTop="14dp"
        android:visibility="gone"
        android:layout_below="@id/termsButton"
        android:text="@string/text_login"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/btn_logout"
        android:visibility="gone"
        android:layout_marginTop="14dp"
        android:layout_below="@id/termsButton"
        android:text="@string/text_logout"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/themoviedb"
            android:id="@+id/textTMDB"/>

        <ImageButton
            android:id="@+id/tmdbButton"
            android:scaleType="fitXY"
            android:background="@color/colorTransparent"
            android:layout_width="match_parent"
            android:layout_marginTop="14dp"
            android:src="@drawable/ic_tmdb"
            android:layout_height="wrap_content"
            android:layout_below="@id/textTMDB"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>


</RelativeLayout>