<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.core.widget.NestedScrollView
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/InputLayout1"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                app:boxCornerRadiusBottomEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusTopStart="30dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:errorEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/searchedit1"
                    android:ems="10"
                    android:inputType="text"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/aramafilmadi"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_below="@id/InputLayout1"
                android:id="@+id/InputLayout2"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                app:boxCornerRadiusBottomEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusTopStart="30dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:errorEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/searchedit2"
                    android:ems="10"
                    android:inputType="text"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/aramayonetmen"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_below="@id/InputLayout2"
                android:id="@+id/InputLayout3"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                app:boxCornerRadiusBottomEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusTopStart="30dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:errorEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/searchedit3"
                    android:ems="10"
                    android:inputType="text"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/aramaoyuncu"/>
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addtur"
                android:textSize="18sp"
                android:layout_below="@id/InputLayout3"
                android:layout_marginTop="34dp"
                android:id="@+id/searchtur"
                android:layout_centerHorizontal="true" />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tur1"
                android:layout_below="@id/searchtur"
                android:layout_marginTop="15dp"
                android:layout_centerHorizontal="true">
                <com.google.android.material.chip.Chip
                    app:chipBackgroundColor="@drawable/chipbackground"
                    app:checkedIcon="@drawable/ic_check"
                    android:checkable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/turaction"
                    android:textSize="18sp"
                    android:id="@+id/searchturaction"/>
                <com.google.android.material.chip.Chip
                    app:chipBackgroundColor="@drawable/chipbackground"
                    android:layout_width="wrap_content"
                    android:layout_toEndOf="@id/searchturaction"
                    android:layout_marginStart="10dp"
                    android:layout_height="wrap_content"
                    android:text="@string/turadventure"
                    android:textSize="18sp"
                    app:checkedIcon="@drawable/ic_check"
                    android:checkable="true"
                    android:id="@+id/searchturadventure"/>
                <com.google.android.material.chip.Chip
                    app:chipBackgroundColor="@drawable/chipbackground"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@id/searchturadventure"
                    android:text="@string/turscience"
                    app:checkedIcon="@drawable/ic_check"
                    android:checkable="true"
                    android:textSize="18sp"
                    android:id="@+id/searchturscience"/>

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tur2"
                android:layout_below="@id/tur1"
                android:layout_marginTop="15dp"
                android:layout_centerHorizontal="true">

                <com.google.android.material.chip.Chip
                    app:chipBackgroundColor="@drawable/chipbackground"
                    app:checkedIcon="@drawable/ic_check"
                    android:checkable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/turfantasy"
                    android:id="@+id/searchturfantasy"/>
                <com.google.android.material.chip.Chip
                    app:chipBackgroundColor="@drawable/chipbackground"
                    app:checkedIcon="@drawable/ic_check"
                    android:checkable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/turthriller"
                    android:id="@+id/searchturthriller"
                    android:layout_toEndOf="@id/searchturfantasy"
                    android:layout_marginStart="10dp"/>
                <com.google.android.material.chip.Chip
                    app:chipBackgroundColor="@drawable/chipbackground"
                    app:checkedIcon="@drawable/ic_check"
                    android:checkable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/turdrama"
                    android:textSize="18sp"
                    android:id="@+id/searchturdrama"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@id/searchturthriller"/>

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tur3"
                android:layout_below="@id/tur2"
                android:layout_marginTop="15dp"
                android:layout_centerHorizontal="true">

                <com.google.android.material.chip.Chip
                    app:chipBackgroundColor="@drawable/chipbackground"
                    app:checkedIcon="@drawable/ic_check"
                    android:checkable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/turcrime"
                    android:textSize="18sp"
                    android:id="@+id/searchturcrime"/>
                <com.google.android.material.chip.Chip
                    app:chipBackgroundColor="@drawable/chipbackground"
                    app:checkedIcon="@drawable/ic_check"
                    android:checkable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/turmystery"
                    android:textSize="18sp"
                    android:id="@+id/searchturmystery"
                    android:layout_toEndOf="@id/searchturcrime"
                    android:layout_marginStart="10dp"/>
                <com.google.android.material.chip.Chip
                    app:chipBackgroundColor="@drawable/chipbackground"
                    app:checkedIcon="@drawable/ic_check"
                    android:checkable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/turwestern"
                    android:textSize="18sp"
                    android:id="@+id/searchturwestern"
                    android:layout_toEndOf="@id/searchturmystery"
                    android:layout_marginStart="10dp"/>

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tur3"
                android:layout_marginTop="15dp"
                android:layout_centerHorizontal="true">

                <com.google.android.material.chip.Chip
                    app:chipBackgroundColor="@drawable/chipbackground"
                    app:checkedIcon="@drawable/ic_check"
                    android:checkable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/turwar"
                    android:textSize="18sp"
                    android:id="@+id/searchturwar"/>
                <com.google.android.material.chip.Chip
                    app:chipBackgroundColor="@drawable/chipbackground"
                    app:checkedIcon="@drawable/ic_check"
                    android:checkable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/turcomedy"
                    android:layout_toEndOf="@id/searchturwar"
                    android:layout_marginStart="10dp"
                    android:textSize="18sp"
                    android:id="@+id/searchturcomedy"/>
                <com.google.android.material.chip.Chip
                    app:chipBackgroundColor="@drawable/chipbackground"
                    app:checkedIcon="@drawable/ic_check"
                    android:checkable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/turhistory"
                    android:layout_toEndOf="@id/searchturcomedy"
                    android:layout_marginStart="10dp"
                    android:textSize="18sp"
                    android:id="@+id/searchturhistory"/>
            </RelativeLayout>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:src="@drawable/ic_search"
        app:backgroundTint="?attr/fabbackgroundcolor"
        app:fabSize="normal"
        android:layout_gravity="bottom|end"
        android:layout_margin="20dp"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonsearch"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>