<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true"
    app:cardElevation="8dp"
    app:cardCornerRadius="5dp"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/cardLayout">

        <ImageView
            android:id="@+id/cardPicture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:transitionName="cardPicture"
            android:layout_alignParentStart="true"
            android:adjustViewBounds="true"
            android:cropToPadding="false"
            android:scaleType="fitXY"
            android:contentDescription="@string/cardpicture"
            />
        <TextView
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:id="@+id/cardTitle1"
            android:text="@string/degisken"
            android:layout_below="@id/cardPicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="14dp"
            android:transitionName="cardTitle1"
            android:layout_marginStart="15dp"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/star"
            android:src="@drawable/ic_star"
            android:layout_below="@id/cardTitle1"
            android:layout_marginTop="14dp"
            android:layout_alignStart="@id/cardTitle1"
            android:contentDescription="@string/film_puani_yildiz"
            android:layout_marginBottom="15dp"
            />
        <TextView
            android:id="@+id/cardTitle2"
            android:transitionName="cardPuan"
            android:layout_toEndOf="@+id/star"
            android:text="@string/degisken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_below="@id/cardTitle1"
            android:layout_marginTop="14dp"
            android:layout_marginStart="10dp"
            />
        <ImageButton
            android:contentDescription="@string/buttonFav"
            android:id="@+id/button_fav"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:layout_width="25dp"
            android:background="@color/colorTransparent"
            android:layout_height="25dp"
            android:layout_marginTop="14dp"
            android:layout_below="@id/cardTitle1"
            app:srcCompat="@drawable/ic_favorite"
            />
    </RelativeLayout>
</androidx.cardview.widget.CardView>