<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.LoginActivity"
    android:id="@+id/loginLayout">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/loginBar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:visibility="gone"
            android:layout_centerInParent="true"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginUsernameLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/text_email"
                android:inputType="text"
                android:padding="10dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginPasswordLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginUsernameLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/text_password"
                android:inputType="textPassword"
                android:padding="10dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginPasswordLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@id/btn_register"
                android:text="@string/text_login"
                android:textAlignment="center"
                android:textSize="20sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_register"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/loginText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/text_login_with" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/loginText"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="14dp">

                <ImageButton
                    android:id="@+id/githubLogin"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@color/colorTransparent"
                    android:src="@drawable/ic_github" />

                <ImageButton
                    android:id="@+id/googleLogin"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@id/githubLogin"
                    android:backgroundTint="@color/colorTransparent"
                    android:src="@drawable/ic_google" />

                <ImageButton
                    android:id="@+id/twitterLogin"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@id/googleLogin"
                    android:backgroundTint="@color/colorTransparent"
                    android:src="@drawable/ic_twitter_login" />
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>