<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/registerBar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:visibility="gone"
            android:layout_centerInParent="true"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editEmailLayout"
            android:layout_width="300dp"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editEmail"
                android:ems="10"
                android:inputType="text"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_email"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editPasswordLayout"
            android:layout_below="@+id/editEmailLayout"
            android:layout_width="300dp"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editPassword"
                android:ems="10"
                android:inputType="textPassword"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_password"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editPasswordValidLayout"
            android:layout_below="@id/editPasswordLayout"
            android:layout_width="300dp"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editPasswordValid"
                android:ems="10"
                android:inputType="textPassword"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_password_valid"/>
        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="normal"
        android:id="@+id/btn_register"
        app:srcCompat="@drawable/ic_check"
        android:layout_gravity="bottom|end"
        android:layout_margin="20dp"
        app:backgroundTint="@color/colorPrimary" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>